--- a/index.html
+++ b/index.html
@@ -41,11 +41,17 @@
       <!--Kontakt-->
       <ul class="contact-button">
         <li>
+          <svg class="icons-contact">
+            <use href="./images/icons.svg#icon-mail"></use>
+          </svg>
           <a class="mail" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
         <li>
+          <svg class="icons-contact">
+            <use href="./images/icons.svg#icon-smartphone"></use>
+          </svg>
           <a class="tel" href="tel:+48111111111">+48 111 111 111</a>
         </li>
       </ul>
@@ -167,9 +173,47 @@
         </ul>
       </div>
     </section>
+    <!--Nasi klienci-->
+    <section class="fourth-header">
+      <div class="container">
+        <h2 class="our-section-title-2">Nasi klienci</h2>
+        <ul class="icons-company-customers">
+          <li>
+            <svg class="icons-company">
+              <use href="./images/icons.svg#icon-company1"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="icons-company">
+              <use href="./images/icons.svg#icon-company2"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="icons-company">
+              <use href="./images/icons.svg#icon-company3"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="icons-company">
+              <use href="./images/icons.svg#icon-company4"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="icons-company">
+              <use href="./images/icons.svg#icon-company5"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="icons-company">
+              <use href="./images/icons.svg#icon-company6"></use>
+            </svg>
+          </li>
+        </ul>
+      </div>
+    </section>
     <!-- Stopka strony -->
     <footer class="bottom">
-      <div class="container">
+      <div class="container bottom-margin">
         <a class="studio-name-footer"><span class="web">Web</span>Studio</a>
       </div>
       <div class="container">
