--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
       <div class="container">
         <ul class="our-section-list-list">
           <li class="our-section-list">
+            <div class="rectangle">
+              <svg class="lorem-icon">
+                <use href="./images/icons.svg#icon-antenna1"></use>
+              </svg>
+            </div>
             <h3 class="our-section-title">LOREM IPSUM</h3>
             <p class="our-section-description">
               Lorem ipsun dolor sit amet, consectuter adipiscing elit. Nam vel
@@ -77,6 +82,11 @@
             </p>
           </li>
           <li class="our-section-list">
+            <div class="rectangle">
+              <svg class="lorem-icon">
+                <use href="./images/icons.svg#icon-clock1"></use>
+              </svg>
+            </div>
             <h3 class="our-section-title">LOREM IPSUM</h3>
             <p class="our-section-description">
               Lorem ipsun dolor sit amet, consectuter adipiscing elit. Nam vel
@@ -84,6 +94,11 @@
             </p>
           </li>
           <li class="our-section-list">
+            <div class="rectangle">
+              <svg class="lorem-icon">
+                <use href="./images/icons.svg#icon-astronaut1"></use>
+              </svg>
+            </div>
             <h3 class="our-section-title">LOREM IPSUM</h3>
             <p class="our-section-description">
               Lorem ipsun dolor sit amet, consectuter adipiscing elit. Nam vel
@@ -91,6 +106,11 @@
             </p>
           </li>
           <li class="our-section-list">
+            <div class="rectangle">
+              <svg class="lorem-icon">
+                <use href="./images/icons.svg#icon-diagram1"></use>
+              </svg>
+            </div>
             <h3 class="our-section-title">LOREM IPSUM</h3>
             <p class="our-section-description">
               Lorem ipsun dolor sit amet, consectuter adipiscing elit. Nam vel
@@ -139,6 +159,20 @@
             />
             <h3 class="team-name">John Doe</h3>
             <p class="team-position">Product Designer</p>
+            <div class="socialmedia-icons">
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-instagram1"></use>
+              </svg>
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-twitter1"></use>
+              </svg>
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-facebook1"></use>
+              </svg>
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-linkedin1"></use>
+              </svg>
+            </div>
           </li>
           <li class="team-name-item">
             <img
@@ -149,6 +183,20 @@
             />
             <h3 class="team-name">John Doe</h3>
             <p class="team-position">Frontend Developer</p>
+            <div class="socialmedia-icons">
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-instagram1"></use>
+              </svg>
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-twitter1"></use>
+              </svg>
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-facebook1"></use>
+              </svg>
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-linkedin1"></use>
+              </svg>
+            </div>
           </li>
           <li class="team-name-item">
             <img
@@ -159,6 +207,20 @@
             />
             <h3 class="team-name">John Doe</h3>
             <p class="team-position">Marketing</p>
+            <div class="socialmedia-icons">
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-instagram1"></use>
+              </svg>
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-twitter1"></use>
+              </svg>
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-facebook1"></use>
+              </svg>
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-linkedin1"></use>
+              </svg>
+            </div>
           </li>
           <li class="team-name-item">
             <img
@@ -169,6 +231,20 @@
             />
             <h3 class="team-name">John Doe</h3>
             <p class="team-position">UI Designer</p>
+            <div class="socialmedia-icons">
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-instagram1"></use>
+              </svg>
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-twitter1"></use>
+              </svg>
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-facebook1"></use>
+              </svg>
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-linkedin1"></use>
+              </svg>
+            </div>
           </li>
         </ul>
       </div>
@@ -178,32 +254,32 @@
       <div class="container">
         <h2 class="our-section-title-2">Nasi klienci</h2>
         <ul class="icons-company-customers">
-          <li>
+          <li class="rectangle2">
             <svg class="icons-company">
               <use href="./images/icons.svg#icon-company1"></use>
             </svg>
           </li>
-          <li>
+          <li class="rectangle2">
             <svg class="icons-company">
               <use href="./images/icons.svg#icon-company2"></use>
             </svg>
           </li>
-          <li>
+          <li class="rectangle2">
             <svg class="icons-company">
               <use href="./images/icons.svg#icon-company3"></use>
             </svg>
           </li>
-          <li>
+          <li class="rectangle2">
             <svg class="icons-company">
               <use href="./images/icons.svg#icon-company4"></use>
             </svg>
           </li>
-          <li>
+          <li class="rectangle2">
             <svg class="icons-company">
               <use href="./images/icons.svg#icon-company5"></use>
             </svg>
           </li>
-          <li>
+          <li class="rectangle2">
             <svg class="icons-company">
               <use href="./images/icons.svg#icon-company6"></use>
             </svg>
@@ -232,6 +308,9 @@
             >
           </li>
         </ul>
+      </div>
+      <div class="join-us-socialmedia">
+        <h3 class="join-us-footer">Dołącz do nas</h3>
       </div>
     </footer>
   </body>
