--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <!--Kontakt-->
       <ul class="contact-button">
         <li>
-          <svg class="icons-contact">
+          <svg class="icons-contact" width="12" height="16">
             <use href="./images/icons.svg#icon-mail"></use>
           </svg>
           <a class="mail" href="mailto:info@devstudio.com"
@@ -49,7 +49,7 @@
           >
         </li>
         <li>
-          <svg class="icons-contact">
+          <svg class="icons-contact" width="10" height="16">
             <use href="./images/icons.svg#icon-smartphone"></use>
           </svg>
           <a class="tel" href="tel:+48111111111">+48 111 111 111</a>
@@ -292,6 +292,25 @@
       <div class="container bottom-margin">
         <a class="studio-name-footer"><span class="web">Web</span>Studio</a>
       </div>
+      <div>
+      <p class="social-footer">Dołącz do nas</p>
+      <div class="footer-icons">
+          <a class="footer-list"><svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-instagram1"></use>
+              </svg></a>
+          <a class="footer-list">
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-twitter1"></use>
+              </svg></a>
+          <a class="footer-list">
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-facebook1"></use>
+              </svg></a>
+          <a class="footer-list">
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-linkedin1"></use>
+              </svg></a>
+      </div>
       <div class="container">
         <address class="bottom-contact-adress">
           m.Warszawa, Aleje Jerozolimskie 21
@@ -309,9 +328,7 @@
           </li>
         </ul>
       </div>
-      <div class="join-us-socialmedia">
-        <h3 class="join-us-footer">Dołącz do nas</h3>
-      </div>
+      
     </footer>
   </body>
 </html>
