--- a/index.html
+++ b/index.html
@@ -160,18 +160,19 @@
             <h3 class="team-name">John Doe</h3>
             <p class="team-position">Product Designer</p>
             <div class="socialmedia-icons">
-              <svg class="icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-instagram1"></use>
-              </svg>
-              <svg class="icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-twitter1"></use>
-              </svg>
-              <svg class="icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-facebook1"></use>
-              </svg>
-              <svg class="icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-linkedin1"></use>
-              </svg>
+              <a class="one-social-icon" href="#">
+                <svg class="icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram1"></use>
+                </svg></a><a class="one-social-icon" href="#">
+                <svg class="icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter1"></use>
+                </svg></a><a class="one-social-icon" href="#">
+                <svg class="icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook1"></use>
+                </svg></a><a class="one-social-icon" href="#">
+                <svg class="icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin1"></use>
+                </svg></a>
             </div>
           </li>
           <li class="team-name-item">
@@ -184,18 +185,19 @@
             <h3 class="team-name">John Doe</h3>
             <p class="team-position">Frontend Developer</p>
             <div class="socialmedia-icons">
-              <svg class="icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-instagram1"></use>
-              </svg>
-              <svg class="icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-twitter1"></use>
-              </svg>
-              <svg class="icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-facebook1"></use>
-              </svg>
-              <svg class="icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-linkedin1"></use>
-              </svg>
+              <a class="one-social-icon" href="#">
+                <svg class="icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram1"></use>
+                </svg></a><a class="one-social-icon" href="#">
+                <svg class="icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter1"></use>
+                </svg></a><a class="one-social-icon" href="#">
+                <svg class="icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook1"></use>
+                </svg></a><a class="one-social-icon" href="#">
+                <svg class="icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin1"></use>
+                </svg></a>
             </div>
           </li>
           <li class="team-name-item">
@@ -208,18 +210,19 @@
             <h3 class="team-name">John Doe</h3>
             <p class="team-position">Marketing</p>
             <div class="socialmedia-icons">
-              <svg class="icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-instagram1"></use>
-              </svg>
-              <svg class="icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-twitter1"></use>
-              </svg>
-              <svg class="icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-facebook1"></use>
-              </svg>
-              <svg class="icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-linkedin1"></use>
-              </svg>
+              <a class="one-social-icon" href="#">
+                <svg class="icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram1"></use>
+                </svg></a><a class="one-social-icon" href="#">
+                <svg class="icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter1"></use>
+                </svg></a><a class="one-social-icon" href="#">
+                <svg class="icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook1"></use>
+                </svg></a><a class="one-social-icon" href="#">
+                <svg class="icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin1"></use>
+                </svg></a>
             </div>
           </li>
           <li class="team-name-item">
@@ -232,18 +235,19 @@
             <h3 class="team-name">John Doe</h3>
             <p class="team-position">UI Designer</p>
             <div class="socialmedia-icons">
-              <svg class="icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-instagram1"></use>
-              </svg>
-              <svg class="icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-twitter1"></use>
-              </svg>
-              <svg class="icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-facebook1"></use>
-              </svg>
-              <svg class="icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-linkedin1"></use>
-              </svg>
+              <a class="one-social-icon" href="#">
+                <svg class="icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram1"></use>
+                </svg></a><a class="one-social-icon" href="#">
+                <svg class="icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter1"></use>
+                </svg></a><a class="one-social-icon" href="#">
+                <svg class="icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook1"></use>
+                </svg></a><a class="one-social-icon" href="#">
+                <svg class="icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin1"></use>
+                </svg></a>
             </div>
           </li>
         </ul>
