--- a/portfolio.html
+++ b/portfolio.html
@@ -40,11 +40,17 @@
       <!--Kontakt-->
       <ul class="contact-button">
         <li>
+          <svg class="icons-contact" width="12" height="16">
+            <use href="./images/icons.svg#icon-mail"></use>
+          </svg>
           <a class="mail" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
         <li>
+          <svg class="icons-contact" width="10" height="16">
+            <use href="./images/icons.svg#icon-smartphone"></use>
+          </svg>
           <a class="tel" href="tel:+48111111111">+48 111 111 111</a>
         </li>
       </ul>
