--- a/index.html
+++ b/index.html
@@ -160,19 +160,20 @@
             <h3 class="team-name">John Doe</h3>
             <p class="team-position">Product Designer</p>
             <div class="socialmedia-icons">
-              <a class="one-social-icon" href="#">
+              <a class="one-social-icon" href="">
                 <svg class="icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram1"></use>
-                </svg></a><a class="one-social-icon" href="#">
+                  <use href="./images/icons.svg#icon-instagram1"></use></svg></a
+              ><a class="one-social-icon" href="">
                 <svg class="icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter1"></use>
-                </svg></a><a class="one-social-icon" href="#">
+                  <use href="./images/icons.svg#icon-twitter1"></use></svg></a
+              ><a class="one-social-icon" href="">
                 <svg class="icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook1"></use>
-                </svg></a><a class="one-social-icon" href="#">
+                  <use href="./images/icons.svg#icon-facebook1"></use></svg></a
+              ><a class="one-social-icon" href="">
                 <svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin1"></use>
-                </svg></a>
+                </svg>
+              </a>
             </div>
           </li>
           <li class="team-name-item">
@@ -185,19 +186,20 @@
             <h3 class="team-name">John Doe</h3>
             <p class="team-position">Frontend Developer</p>
             <div class="socialmedia-icons">
-              <a class="one-social-icon" href="#">
+              <a class="one-social-icon" href="">
                 <svg class="icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram1"></use>
-                </svg></a><a class="one-social-icon" href="#">
+                  <use href="./images/icons.svg#icon-instagram1"></use></svg></a
+              ><a class="one-social-icon" href="">
                 <svg class="icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter1"></use>
-                </svg></a><a class="one-social-icon" href="#">
+                  <use href="./images/icons.svg#icon-twitter1"></use></svg></a
+              ><a class="one-social-icon" href="">
                 <svg class="icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook1"></use>
-                </svg></a><a class="one-social-icon" href="#">
+                  <use href="./images/icons.svg#icon-facebook1"></use></svg></a
+              ><a class="one-social-icon" href="">
                 <svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin1"></use>
-                </svg></a>
+                </svg>
+              </a>
             </div>
           </li>
           <li class="team-name-item">
@@ -210,19 +212,20 @@
             <h3 class="team-name">John Doe</h3>
             <p class="team-position">Marketing</p>
             <div class="socialmedia-icons">
-              <a class="one-social-icon" href="#">
+              <a class="one-social-icon" href="">
                 <svg class="icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram1"></use>
-                </svg></a><a class="one-social-icon" href="#">
+                  <use href="./images/icons.svg#icon-instagram1"></use></svg></a
+              ><a class="one-social-icon" href="">
                 <svg class="icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter1"></use>
-                </svg></a><a class="one-social-icon" href="#">
+                  <use href="./images/icons.svg#icon-twitter1"></use></svg></a
+              ><a class="one-social-icon" href="">
                 <svg class="icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook1"></use>
-                </svg></a><a class="one-social-icon" href="#">
+                  <use href="./images/icons.svg#icon-facebook1"></use></svg></a
+              ><a class="one-social-icon" href="">
                 <svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin1"></use>
-                </svg></a>
+                </svg>
+              </a>
             </div>
           </li>
           <li class="team-name-item">
@@ -235,19 +238,20 @@
             <h3 class="team-name">John Doe</h3>
             <p class="team-position">UI Designer</p>
             <div class="socialmedia-icons">
-              <a class="one-social-icon" href="#">
+              <a class="one-social-icon" href="">
                 <svg class="icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram1"></use>
-                </svg></a><a class="one-social-icon" href="#">
+                  <use href="./images/icons.svg#icon-instagram1"></use></svg></a
+              ><a class="one-social-icon" href="">
                 <svg class="icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter1"></use>
-                </svg></a><a class="one-social-icon" href="#">
+                  <use href="./images/icons.svg#icon-twitter1"></use></svg></a
+              ><a class="one-social-icon" href="">
                 <svg class="icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook1"></use>
-                </svg></a><a class="one-social-icon" href="#">
+                  <use href="./images/icons.svg#icon-facebook1"></use></svg></a
+              ><a class="one-social-icon" href="">
                 <svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin1"></use>
-                </svg></a>
+                </svg>
+              </a>
             </div>
           </li>
         </ul>
@@ -296,25 +300,6 @@
       <div class="container bottom-margin">
         <a class="studio-name-footer"><span class="web">Web</span>Studio</a>
       </div>
-      <div>
-      <p class="social-footer">Dołącz do nas</p>
-      <div class="footer-icons">
-          <a class="footer-list"><svg class="icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-instagram1"></use>
-              </svg></a>
-          <a class="footer-list">
-              <svg class="icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-twitter1"></use>
-              </svg></a>
-          <a class="footer-list">
-              <svg class="icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-facebook1"></use>
-              </svg></a>
-          <a class="footer-list">
-              <svg class="icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-linkedin1"></use>
-              </svg></a>
-      </div>
       <div class="container">
         <address class="bottom-contact-adress">
           m.Warszawa, Aleje Jerozolimskie 21
@@ -332,7 +317,29 @@
           </li>
         </ul>
       </div>
-      
+      <div class="footer-join">
+        <h3 class="footer-joinus">Dołącz do nas</h3>
+      </div>
+      <div class="socialmedia-footer">
+        <a class="icon-footer" href=" ">
+          <svg class="icon" width="20" height="20">
+            <use href="./images/icons.svg#icon-instagram1"></use>
+          </svg> </a
+        ><a class="icon-footer" href=" ">
+          <svg class="icon" width="20" height="20">
+            <use href="./images/icons.svg#icon-twitter1"></use>
+          </svg> </a
+        ><a class="icon-footer" href=" ">
+          <svg class="icon" width="20" height="20">
+            <use href="./images/icons.svg#icon-facebook1"></use>
+          </svg>
+        </a>
+        <a class="icon-footer" href=" ">
+          <svg class="icon" width="20" height="20">
+            <use href="./images/icons.svg#icon-linkedin1"></use>
+          </svg>
+        </a>
+      </div>
     </footer>
   </body>
 </html>
