--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
               <a class="nav-link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="contact-links">
-              <a class="nav-link" href="#">Kontakt</a>
+              <a class="nav-link" href="./index.html">Kontakt</a>
             </li>
           </ul>
         </nav>
@@ -195,24 +195,60 @@
       </section>
     </main>
     <!-- Stopka strony -->
-    <footer class="bottom">
+    <footer class="last-section">
       <div class="container">
-        <a class="studio-name-footer"><span class="web">Web</span>Studio</a>
-        <address class="bottom-contact-adress">
-          m.Warszawa, Aleje Jerozolimskie 21
-        </address>
-        <ul class="bottom-contact-adress">
-          <li>
-            <a class="bottom-contact-portfolio" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+        <div class="two-blocks">
+          <div class="footer-address">
+            <a href="/webstudio.html" class="studio-name-footer"
+              ><span class="web">Web</span>Studio</a
             >
-          </li>
-          <li>
-            <a class="bottom-contact-link" href="tel:+48111111111"
-              >+48 111 111 111</a
-            >
-          </li>
-        </ul>
+            <div class="link-footer">
+              <address class="bottom-contact-adress">
+                m. Warszawa, Aleje Jerozolimskie 21
+              </address>
+
+              <address class="address-footer">
+                <a class="mail-footer" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+                <a href="tel:+48111111111">+48 111 111 111</a>
+              </address>
+            </div>
+          </div>
+          <div class="social-icon-footer">
+            <h5 class="join-us">DOŁĄCZ DO NAS</h5>
+            <ul class="footer-list-icon">
+              <li class="icon-group-footer">
+                <a class="one-social-icon" href="">
+                  <svg class="icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-group-footer">
+                <a class="one-social-icon" href="">
+                  <svg class="icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-group-footer">
+                <a class="one-social-icon" href="">
+                  <svg class="icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-group-footer">
+                <a class="one-social-icon" href="">
+                  <svg class="icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
