--- a/index.html
+++ b/index.html
@@ -296,49 +296,59 @@
       </div>
     </section>
     <!-- Stopka strony -->
-    <footer class="bottom">
-      <div class="container bottom-margin">
-        <a class="studio-name-footer"><span class="web">Web</span>Studio</a>
-      </div>
+    <footer class="last-section">
       <div class="container">
-        <address class="bottom-contact-adress">
-          m.Warszawa, Aleje Jerozolimskie 21
-        </address>
-        <ul class="bottom-contact-adress">
-          <li>
-            <a class="bottom-contact-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+        <div class="two-blocks">
+          <div class="footer-address">
+            <a href="/webstudio.html" class="studio-name-footer"
+              ><span class="web">Web</span>Studio</a
             >
-          </li>
-          <li>
-            <a class="bottom-contact-link" href="tel:+48111111111"
-              >+48 111 111 111</a
-            >
-          </li>
-        </ul>
-      </div>
-      <div class="footer-join">
-        <h3 class="footer-joinus">Dołącz do nas</h3>
-      </div>
-      <div class="socialmedia-footer">
-        <a class="icon-footer" href=" ">
-          <svg class="icon" width="20" height="20">
-            <use href="./images/icons.svg#icon-instagram1"></use>
-          </svg> </a
-        ><a class="icon-footer" href=" ">
-          <svg class="icon" width="20" height="20">
-            <use href="./images/icons.svg#icon-twitter1"></use>
-          </svg> </a
-        ><a class="icon-footer" href=" ">
-          <svg class="icon" width="20" height="20">
-            <use href="./images/icons.svg#icon-facebook1"></use>
-          </svg>
-        </a>
-        <a class="icon-footer" href=" ">
-          <svg class="icon" width="20" height="20">
-            <use href="./images/icons.svg#icon-linkedin1"></use>
-          </svg>
-        </a>
+            <div class="link-footer">
+              <address class="bottom-contact-adress">
+                m. Warszawa, Aleje Jerozolimskie 21
+              </address>
+              <address class="address-footer">
+                <a class="mail-footer" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+                <a href="tel:+48111111111">+48 111 111 111</a>
+              </address>
+            </div>
+          </div>
+          <div class="social-icon-footer">
+            <h5 class="join-us">DOŁĄCZ DO NAS</h5>
+            <ul class="footer-list-icon">
+              <li class="icon-group-footer">
+                <a class="one-social-icon" href="">
+                  <svg class="icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-group-footer">
+                <a class="one-social-icon" href="">
+                  <svg class="icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-group-footer">
+                <a class="one-social-icon" href="">
+                  <svg class="icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-group-footer">
+                <a class="one-social-icon" href="">
+                  <svg class="icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
